Add custom tray icon and mark MVP as complete
Added speakeasy.ico as the application tray icon, updating TrayIconManager to use it if available. Updated SpeakEasy.csproj to include the icon asset. Marked the MVP (Text-to-Speech) stage as complete in implementation_plan.md and task.md.

--- a/SpeakEasy.csproj
+++ b/SpeakEasy.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="System.Speech" Version="10.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Assets\\speakeasy.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
